# rust-tools-cli

./: Cargo.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  mod.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  mod.rs
