cargo-features = ["edition2024"]
[package]
name = "rust-tools-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
duckdb = { version = "1.1.1", features = ["bundled"] }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
